--- a/app/globals.css
+++ b/app/globals.css
@@ -23,3 +23,18 @@
 h2 {
   font-family: "Playfair Display", serif;
 }
+
+*::-webkit-scrollbar-track {
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+  background-color: transparent;
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+  background-color: transparent;
+  border-radius: 20px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #000000;
+}
