--- a/components/Navbar/Navbar.css
+++ b/components/Navbar/Navbar.css
@@ -68,7 +68,11 @@
     background: linear-gradient(to right, #8e2de2, #4a00e0);
     color: ghostwhite;
     overflow: hidden;
+    border: 2px solid #4a00e0;
   }
+  /* .cssbuttons-io:hover {
+    border: 2px solid transparent;
+  } */
 
   .cssbuttons-io svg {
     width: 1.2em;
